--- a/index.html
+++ b/index.html
@@ -20,11 +20,33 @@
             <div class="header-main-left">
                 <p class="large-header header-color-1">This website is awesome</p>
                 <p class="header-color-2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button class="sign-up">Sign Up</button>
+                <button class="header-sign-up">Sign Up</button>
             </div>
             <img class="mountain-scene" src="./img/mountain-scene.jpg" alt="A cartoon picture of a mountain range.">
 
         </div>
+    </div>
+    <div class="wrapper">
+        <div class="middle-info">
+            <p class="info-heading">Some random information.</p>
+            <div class="info-img">
+                <img class="info-img-1" src="./img/colorful-grass.jpg" alt="Picture of long grass with hints of red">this is some subtext under an illustration or image
+                <img class="info-img-2" src="./img/fall-road.jpg" alt="Winding road with colorful autumn trees">this is some subtext under an illustration or image
+                <img class="info-img-3" src="./img/fall-forest.jpg" alt="Beautiful forest in autumn">this is some subtext under an illustration or image
+                <img class="info-img-4" src="./img/sunset-mountains.jpg" alt="Mountain range at sunset">this is some subtext under an illustration or image
+            </div>
+        </div>
+        <div class="quote-section">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        </div>
+        <div class="cta">
+            <p class="cta-heading">Call to action! It's time!</p>
+            <p class="cta-description">Sign up for our product by clicking that button right over there!</p>
+            <button class="cta-button">Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <p>Copyright © Nathan Schreiber 2022</p>
     </div>
 </body>
 
