--- a/index.html
+++ b/index.html
@@ -28,21 +28,37 @@
     </div>
     <div class="wrapper">
         <div class="middle-info">
-            <p class="info-heading">Some random information.</p>
+            <p class="info-heading">Some Random Information</p>
             <div class="info-img">
-                <img class="info-img-1" src="./img/colorful-grass.jpg" alt="Picture of long grass with hints of red">this is some subtext under an illustration or image
-                <img class="info-img-2" src="./img/fall-road.jpg" alt="Winding road with colorful autumn trees">this is some subtext under an illustration or image
-                <img class="info-img-3" src="./img/fall-forest.jpg" alt="Beautiful forest in autumn">this is some subtext under an illustration or image
-                <img class="info-img-4" src="./img/sunset-mountains.jpg" alt="Mountain range at sunset">this is some subtext under an illustration or image
+                <div class="img-caption">
+                    <img class="info-img-1" src="./img/colorful-grass.jpg" alt="Picture of long grass with hints of red">this is some subtext under an illustration or image
+                </div>    
+                <div class="img-caption">
+                    <img class="info-img-2" src="./img/fall-road.jpg" alt="Winding road with colorful autumn trees">this is some subtext under an illustration or image
+                </div>    
+                <div class="img-caption">
+                    <img class="info-img-3" src="./img/fall-forest.jpg" alt="Beautiful forest in autumn">this is some subtext under an illustration or image
+                </div>    
+                <div class="img-caption">
+                    <img class="info-img-4" src="./img/sunset-mountains.jpg" alt="Mountain range at sunset">this is some subtext under an illustration or image
+                </div>
+                
             </div>
         </div>
         <div class="quote-section">
+            <div class="quote-text">
             <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="thor">- Thor, God of Thunder</p>
+        </div>
         </div>
         <div class="cta">
-            <p class="cta-heading">Call to action! It's time!</p>
-            <p class="cta-description">Sign up for our product by clicking that button right over there!</p>
-            <button class="cta-button">Sign up</button>
+            <div class="cta-left">
+                <p class="cta-heading">Call to action! It's time!</p>
+                <p class="cta-description">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="cta-right">
+                <button class="cta-button">Sign up</button>
+            </div>
         </div>
     </div>
     <div class="footer">
